--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,11 +16,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+      - run: yarn install
         working-directory: ./montage
       - run: npm run build 
         working-directory: ./montage
-      - run: npm install
+      - run: yarn install
         working-directory: ./server
       - run: npm run build --if-present
         working-directory: ./server
